--- a/src/stylesheets/speak.module.scss
+++ b/src/stylesheets/speak.module.scss
@@ -93,7 +93,7 @@ button {
     flex-direction: row;
     transform-origin: top center;
     border: 1px solid rgba(0, 0, 0, 0.15);
-    border-radius: 15px;
+    // border-radius: 15px;
     overflow: hidden;
     margin-top: 15px;
     &.mobile {
@@ -310,34 +310,32 @@ button {
   max-width: 800px;
   height: 70vh;
   max-height: 500px;
-  background-color: #fff;
+  background-color: #f0f2f5;
   border-radius: 20px;
   padding: 20px;
   position: relative;
 
   .row1 {
     display: flex;
-    gap: 15px;
+    gap: 10px;
     align-items: center;
 
     .btn {
       cursor: pointer;
-      min-width: 120px;
-      padding: 12px 15px;
+      padding: 5px 15px 3px;
       border-radius: 100px;
-      font-size: 1.1em;
-      font-weight: 500;
+      font-family: 'Rg-B', sans-serif;
+      font-size: 1em;
       display: flex;
       gap: 5px;
       align-items: center;
-      justify-content: center;
-      transition: all 0.2s;
+      transition: all 0.1s;
       &:active {
-        transform: scale(0.95);
+        transform: scale(0.99);
       }
       &.gray {
-        background-color: #d0d0d0;
-        color: #fff;
+        border: 1.5px solid #333;
+        color: #333;
       }
       &.blue {
         background-color: #3ab6ff;
@@ -345,19 +343,24 @@ button {
       }
 
       .iconSpeaker {
-        width: 24px;
-        height: 24px;
+        width: 20px;
+        height: 20px;
         background-image: url('/src/assets/images/speak/volume.svg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 20px 20px;
       }
     }
   }
 
   .row2 {
-    height: calc(100% - 108px);
+    height: calc(100% - 120px);
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 20px;
+    padding-top: 20px;
 
     .sentence {
       width: 100%;
@@ -368,18 +371,111 @@ button {
 
       .word {
         font-size: 1.5em;
+        font-weight: 500;
+        &.red {
+          color: #ff274f;
+        }
       }
     }
 
     .phonemes {
-      width: 100%;
+      max-width: calc(100% - 30px);
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
       gap: 5px;
+      background-color: #fff;
+      border-radius: 20px;
+      padding: 15px;
+      overflow-x: scroll;
+      .wordContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 10px;
+        background-color: #f0f2f5;
+        padding: 5px 10px;
+        border-radius: 10px;
 
-      .phoneme {
-        font-size: 1.5em;
+        .row1 {
+          text-align: center;
+          font-size: 1.25em;
+          font-weight: 500;
+        }
+
+        .row2 {
+          // min-height: 30px;
+          display: flex;
+          flex-direction: row;
+          flex-wrap: nowrap;
+          justify-content: center;
+          align-items: center;
+          gap: 3px;
+          transition: all 0.2s;
+
+          .phonemeResult {
+            .phoneme {
+              font-size: 0.8em;
+              font-weight: 500;
+              background-color: #333;
+              color: #fff;
+              border-radius: 5px;
+              padding: 2px 5px;
+              &.red {
+                background-color: #ff274f;
+              }
+              &.orange {
+                background-color: #ffc148;
+              }
+              &.green {
+                background-color: #2ccd70;
+              }
+            }
+
+            .phonemeScore {
+              font-size: 0.5em;
+              color: #999;
+              width: 100%;
+              text-align: center;
+              margin-top: 3px;
+            }
+          }
+        }
+      }
+    }
+
+    @media (pointer: coarse) and (hover: none) {
+      .phonemes {
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+      }
+    }
+
+    .btnToggle {
+      cursor: pointer;
+      font-size: 0.8em;
+      font-family: 'Rg-B', sans-serif;
+      padding: 5px 5px 3px 12px;
+      border-radius: 100px;
+      background-color: #333;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 3px;
+      .icoChev {
+        width: 18px;
+        height: 18px;
+        background-image: url('/src/assets/images/icons/icon_chev_down_white.svg');
+        background-size: 18px 18px;
+        background-position: center;
+        background-repeat: no-repeat;
+        transform: rotate(0);
+        transition: all 0.2s;
+        &.rotate {
+          transform: rotate(180deg);
+        }
       }
     }
   }
@@ -405,16 +501,18 @@ button {
 
     .txt {
       color: #fff;
-      font-size: 2em;
+      font-family: 'Rg-B', sans-serif;
+      font-size: 1.25em;
       font-weight: 600;
     }
 
     .iconArrow {
-      width: 40px;
-      height: 40px;
+      width: 24px;
+      height: 24px;
       background-image: url('/src/assets/images/speak/chev_right.svg');
       background-repeat: no-repeat;
       background-position: center;
+      background-size: 24px 24px;
     }
   }
 }
